fix: overflow non mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,7 @@ html {
 }
 
 body {
-  @apply !min-w-full overflow-y-hidden;
+  @apply !min-w-full overflow-y-hidden md:overflow-y-auto;
 }
 
 @layer base {
